<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuTypeMissionIcon"
        android:icon="@drawable/ic_menu_more"
        android:title="@string/mission_type"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuMissionOptions"
        android:icon="@drawable/ic_menu_edit"
        android:title="@string/mission_options" />
    <item
        android:id="@+id/menuNewMission"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/mission_new" />
    <item
        android:id="@+id/menuResetMission"
        android:icon="@drawable/ic_menu_rotate"
        android:title="@string/mission_reset"
         />
    <item
        android:id="@+id/menuMissionAbout"
        android:icon="@drawable/ic_menu_info_details"
        android:title="@string/mission_about" />
    <item
        android:id="@+id/menuMissionHelp"
        android:icon="@drawable/ic_menu_help"
        android:title="@string/mission_help" />
</menu>
